--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <div class="main">
       <canvas id="jsCanvas" class="canvas"></canvas>
       <div class="controls">
+        <div
+          class="controls__range"
+          min="0.1"
+          max="5.0"
+          value="2.5"
+          steps="0.1"
+        >
+          <input type="range" id="jsRange" />
+        </div>
+        <div class="controls__btns">
+          <button type="button" id="jsMode">Fill</button>
+          <button type="button" id="jsSave">Save</button>
+        </div>
         <div class="controls__colors" id="jsColors">
           <div class="control__color" style="background-color: #2c2c2c"></div>
           <div class="control__color" style="background-color: #fff"></div>
