--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <div class="main">
       <canvas id="jsCanvas" class="canvas"></canvas>
       <div class="controls">
-        <div
-          class="controls__range"
-          min="0.1"
-          max="5.0"
-          value="2.5"
-          steps="0.1"
-        >
-          <input type="range" id="jsRange" />
+        <div class="controls__range">
+          <input
+            type="range"
+            id="jsRange"
+            min="0.1"
+            max="5"
+            value="2.5"
+            step="0.1"
+          />
         </div>
         <div class="controls__btns">
           <button type="button" id="jsMode">Fill</button>
